--- a/networkdisk/src/main/webapp/css/share.css
+++ b/networkdisk/src/main/webapp/css/share.css
@@ -94,6 +94,7 @@
 #session_content a
 {
 	text-decoration: none;
+	cursor: pointer;
 	
 
 }
@@ -108,6 +109,7 @@
 .session_table:hover
 {
 	background:lavender;
+	cursor: pointer;
 }
 
 
@@ -139,11 +141,13 @@
 {
 	text-decoration: none;
 	color: black;
+	cursor: pointer;
 }
 
 #user_content .user_table:hover
 {
 	background-color: lavender;
+	cursor: pointer;
 }
 
 .user_table
@@ -152,6 +156,7 @@
 	border-bottom: 1px solid lavender;
 	width: 280px;	
 	height: 60px;
+	cursor: pointer;
 
 }
 .user_name 
@@ -182,6 +187,7 @@
 	text-decoration: none;
 	color: black;
 	outline: none;
+	cursor: pointer;
 }
 .session_bottom ul li a:hover
 {
@@ -192,7 +198,9 @@
 	height: 100px;
 	width: 150px;
 	margin-top: 70px;
+	cursor: pointer;
 }
+
 #default_a  button
 {
 	height: 50px;
@@ -202,6 +210,7 @@
 	border: 0;
 	border-radius: 2px;
 	outline: none;
+	cursor: pointer;
 	
 }
 #default_a a:hover
@@ -234,6 +243,7 @@
 #active_button 
 {
  background-color: black;
+ cursor: pointer;
 }
 .option_two a:hover
 {
@@ -249,6 +259,7 @@
 	color:white;
 	margin-top: 20px;
 	outline: none;
+	cursor: pointer;
 }
 
 .table_new_friend
@@ -298,6 +309,7 @@
 	padding-right: 20px;
 	text-align: center;
 	line-height: 70px;
+	cursor: pointer;
 }
 
 .listitem_right button
@@ -310,6 +322,7 @@
 	border-radius: 3px;
 	text-align: center;
 	outline: none;
+	cursor: pointer;
 	
 }
 .listitem_right a button:hover
