--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -474,7 +474,6 @@ img.userpic {
 .equip_1{
 	width: 380px;
 	position: absolute;
-	margin-top: -20px;
 	margin-left: 355px;
 	display: none;
 	float: left;	
@@ -635,6 +634,8 @@ img.userpic {
 	background: #F8F8F8;
 	width: 90%;
 	float: right;
+	height:450px;
+	overflow-y: scroll;
 	margin-top: 50px;
 	border-top: 1px solid #ADADAD;
 	border-left: 1px solid #ADADAD;
@@ -1012,7 +1013,7 @@ img.userpic {
 	display: inline-block;
 	border: 1px solid #262626;
 	border-radius: 5px;
-	line-height: 30px;
+	padding-top:7px;
 	margin-left:300px; 
 	cursor: pointer;
 	text-align: center;
