--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -896,7 +896,7 @@ img.userpic {
 	height:350px;
 	position:fixed;
 	right:30px;
-	bottom:-300px;
+	bottom:0px;
 	background-color:#FFFFFF;
 	box-shadow: 0px 0.5px 5px #111111;
 	border-top-left-radius: 5px;
@@ -1243,4 +1243,49 @@ img.userpic {
 	margin: 0 auto;
 	font-size: 13px;
 	color: #777777;
+}
+.progress-bar-inner {
+	background-color: hsl(0, 0%, 88%);
+	display: block;
+	width: 0;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: width 1s linear 0s;
+	animation: animate-positive 2s;
+}
+
+.progress-bar-inner:before {
+	content: "";
+	background-color: hsl(0, 0%, 100%);
+	border-radius: 50%;
+	width: 4px;
+	height: 4px;
+	position: absolute;
+	right: 1px;
+	top: 0;
+	z-index: 1;
+}
+.progress-bar-inner:after {
+	content: "";
+	width: 14px;
+	height: 14px;
+	background-color: inherit;
+	border-radius: 50%;
+	position: absolute;
+	right: -4px;
+	top: -5px;
+}
+
+@-webkit-keyframes animate-positive {
+	0% {
+		width: 0%;
+	}
+}
+
+@keyframes animate-positive {
+	0% {
+		width: 0%;
+	}
 }
