--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -381,12 +381,12 @@ img.userpic {
     line-height: 20px;
     overflow: hidden;
 }
-#up{
-	 opacity:0 ;	
+#upfile{
+	 opacity:0;	
 	 position: absolute;
 	 font-size: 17px;
      left: 0px;
-     top: 0px;
+     top: 2px;
 }
 .file:hover {
     background: #888888;
@@ -769,15 +769,15 @@ img.userpic {
 	display: block;
 	color: #3C3C3C;
 }
- #more{
+.more{
 	display: none;
 	float: right;
 }
- #more span{
+.more span{
 	margin-left: 10px;
 	color: #269ABC;
 }
- #more span:hover{
+.more span:hover{
 	color: #3C3C3C;
 }
 
@@ -865,7 +865,7 @@ img.userpic {
 	height:350px;
 	position:fixed;
 	right:30px;
-	bottom:-300px;
+	bottom:0px;
 	background-color:#FFFFFF;
 	box-shadow: 0px 0.5px 5px #111111;
 	border-top-left-radius: 5px;
