注册登录界面的logo修改以及弹框 cj

--- a/networkdisk/src/main/webapp/user/css/login.css
+++ b/networkdisk/src/main/webapp/user/css/login.css
@@ -1,7 +1,14 @@
 .logo{
    position: absolute;
     left: 26px;
-    top:18px;
+    top:15px;
+}
+.logo span
+{
+	font-size:23px;
+	color:white;
+	padding-left: 5px;
+	
 }
 .body-content{
 	font-size:44px;
