修改index样式,以及鼠标右键——zl

--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -383,16 +383,19 @@ img.userpic {
 }
 #upfile{
 	 opacity:0;	
+	 cursor:pointer;
 	 position: absolute;
 	 font-size: 17px;
      left: 0px;
      top: 2px;
+     cursor: pointer;
 }
 .file:hover {
     background: #888888;
     border-color: #888888;
     color: #F7F7F7;
     text-decoration: none;
+    cursor: pointer;
 }
 .upload{
 	display: none;
@@ -645,11 +648,11 @@ img.userpic {
 	width: 95%;
 	margin: 0px auto;
 }
-.table #t1{
-	width: 625px;
+.table td:first-child{
+	width: 575px;
 }
-.table #t2,.table #t3{
-	width: 228px;
+.table td:last-child{
+	width: 210px;
 }
 .table td:hover{
 	background-color: rgba(220, 200, 200, 0.4);
@@ -770,10 +773,11 @@ img.userpic {
 	color: #3C3C3C;
 }
 .more{
-	display: none;
+	display:none;
 	float: right;
 }
 .more span{
+	margin-top:5px;
 	margin-left: 10px;
 	color: #269ABC;
 }
@@ -932,6 +936,10 @@ img.userpic {
 .file_status{
 	width: 100px;
 	font-size: 12px;	
+}
+.up_status{
+	width: 100px;
+	font-size: 12px;
 }
 .file_operate{
 	cursor: pointer;
@@ -1257,4 +1265,34 @@ img.userpic {
 	0% {
 		width: 0%;
 	}
+}
+
+/* emptyfile界面 */
+.nullfile{
+	display:none;
+	background: url(/networkdisk/img/emptyfile.png) no-repeat scroll center 0 transparent;
+    padding-top: 146px;
+    width: 488px;
+    position: relative;
+    left: 50%;
+    top: 300px;
+    text-align: center;
+    margin: -190px 0 0 -244px;
+    font-size:14px;
+}
+.nullfile p{
+	color: #424e67;
+    margin: 20px 0;
+    font-weight: 200;
+	display: inline;
+	font-family:"微软雅黑";
+	padding:0px; 
+}
+.nullfile span{
+	color: #3b8cff;
+}
+.nullfile span.mlfile{
+	margin: 0 5px;
+    cursor: pointer;
+    position: relative;
 }
