--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -5,6 +5,7 @@ html {
 	border: 0;
 	outline: 0;
 	font-size: 100%;
+	height: 100%;
 	vertical-align: baseline;
 	background: transparent;
 }
@@ -14,6 +15,7 @@ body {
 	background-color: #dddddd;
 	font-family: Lato;
 	margin: 0px;
+	height: 100%;
 	overflow: hidden;
 }
 
@@ -40,7 +42,7 @@ body h6 {
 	height: 50px;
 }
 #in-nav ul {
-	position: relative;
+	position: absolute;
 }
 
 #in-nav .span1 ul li {
@@ -67,8 +69,8 @@ body h6 {
 	width: 500px;
 	height: 50px;
 	text-align: center;
-	margin-right:80px;
-	float: right;
+	right:80px;
+	position:absolute;
 }
 #in-nav .span1 ul li.active {
 	border-top-left-radius:5px;
@@ -228,7 +230,7 @@ img.userpic {
 	/* background:#32C2CD url(/networkdisk/img/bg-default.jpg) !important;  */
 	/* background:url(/networkdisk/img/pink.jpg) !important; */
 	/* background:url(/networkdisk/img/orange.jpg) !important; */
-	height:600px;
+	height:597px;
 	width:136px;
 	float: left;	
 }
@@ -324,8 +326,10 @@ img.userpic {
 
 .page {
 	width: 1230px;
-	height: 600px;
-	float: right;
+	height: 597px;
+	position:absolute;
+	display:inline-block;
+	overflow:hidden;
 	background: #e9ebec url(/networkdisk/img/body-bg.png);
 }
 .admin .lbaxztop{
@@ -364,7 +368,7 @@ img.userpic {
 }
 .span3{
 	height: 35px;
-	margin-top: -30px;
+	margin-top:20px;
 	border-bottom: 1px solid #ADADAD;
 }
 .file {
@@ -467,6 +471,16 @@ img.userpic {
 .equi_1 li#f1{
 	border-top-left-radius: 5px;
 	border-bottom-left-radius: 5px;
+}
+.md-trigger{
+	display:inline-block;
+	width:70px;
+	color:#333;
+}
+.md-trigger:hover,
+.md-trigger:link{
+	color:#333;
+	text-decoration: none;
 }
 .equi_1 li#f2{
 	border-top-right-radius: 5px;
@@ -594,18 +608,10 @@ img.userpic {
 	left: 5px;
 	margin-top: 8px;
 }
-#tw1,#tw3,#tw4,#tw5,#tw6,#tw7{
-	margin-top:50px ;
-	height: 500px;
-}
-#tw2{
-	margin-top:10px ;
-	min-height: 500px;
-}
 .tw1_body{
 	width: 90%;
 	margin:0px auto;
-	height:550px;
+	height:510px;
 	overflow-y: scroll;
 	margin-top: 30px;
 	border-top: 1px solid #ADADAD;
@@ -651,8 +657,8 @@ img.userpic {
 	color:#777;
 	text-decoration: none;
 }
-.table td i{
-	color:#000;
+.table td a:hover{
+	color:#409fff;
 }
 .table td:first-child{
 	width: 575px;
@@ -780,11 +786,13 @@ img.userpic {
 }
 .more{
 	display:none;
+	position:relative;
 	float: right;
 }
 .more span{
-	margin-top:5px;
+	margin-top:10px;
 	margin-left: 10px;
+	font-size:16px;
 	color: #269ABC;
 }
 .more span:hover{
@@ -1302,20 +1310,27 @@ img.userpic {
     cursor: pointer;
     position: relative;
 }
+.more{
+	position: relative;
+	vertical-align: middle;
+}
 .menu {
-    position: absolute;
-    display: block;
+	position:absolute;
+	margin: 0px auto;
+	top:20px;
+	display: none;
     width: 96px;
-    visibility: hidden;
     border: .5px solid rgb(38, 154, 188);
     font-size: 13px;
     text-align: center;
     background: #fff;
-    left:780px;
     z-index: 111;
 }
+.menu a{
+	font-size: 14px;
+}
 .menu .g-button-menu {
-    position: relative;
+	position:relative;
     top: 0px;
     display: block;
     height: 32px;
