--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -662,7 +662,7 @@ img.userpic {
 	text-decoration: none;
 }
 .table td a:hover{
-	color:#409fff;
+	color:#0080ff;
 }
 .table td:first-child{
 	width: 575px;
@@ -670,9 +670,14 @@ img.userpic {
 .table td:last-child{
 	width: 210px;
 }
-.table td:hover{
-	background-color: rgba(220, 200, 200, 0.4);
+.table tr{
+	width:100%;
+
 }
+.table>tbody>tr>td{
+	vertical-align:middle;
+}
+
 #tabs .active a {
 	background: url("/networkdisk/img/side-bar-list-bg.png");;
 	border-radius: 6px;
@@ -1403,4 +1408,57 @@ img.userpic {
 .menu .g-button-menu:hover{
 	color: #FFFFFF;
 	background: rgb(38, 154, 188);
+}
+.reName{
+	width:930px;
+	height:48px;
+	margin-top:-48px;
+	margin-left:65px;
+	padding-top:2px;
+	position:fixed;
+	background: #F0F8FD;
+}
+.reName input{
+	-webkit-appearance: textfield;
+    -webkit-rtl-ordering: logical;
+    user-select: text;
+    cursor: auto;
+}
+.GodName ,.filename{
+    margin: 9px 0;
+    _margin: 7px 0;
+    padding: 0 0 0 5px;
+    width: 200px;
+    height: 24px;
+    vertical-align: middle;
+    border: 1px solid #3b8cff;
+    background: #fff;
+    border-radius: 2px;
+
+}
+#tw1 .reName i{
+	color: #3b8cff;
+	font-size: 14px;
+	border:1px solid #3b8cff;
+	width:22px;
+	height:22px;
+	bottom:-2px;
+	line-height:20px;
+	text-align:center;
+	position:relative;
+	margin-left:10px;
+	cursor: pointer;
+}
+#tw1 .table tr td i{
+	color: #3b8cff;
+	font-size: 14px;
+	border:1px solid #3b8cff;
+	width:22px;
+	height:22px;
+	bottom:-1px;
+	line-height:20px;
+	text-align:center;
+	position:relative;
+	margin-left:10px;
+	cursor: pointer;
 }
