--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -1552,3 +1552,90 @@ img.userpic {
     opacity: 0.1;
     -moz-opacity: 0.1;
 }
+.login a{
+	text-align: center;
+	font-size: 14px;
+	display: inline-block;
+	width: 70px;
+	height: 32px;
+	line-height: 32px;
+	background: #ececec;
+	text-decoration: none;
+}
+.login .load{
+	-webkit-transition: background 0.3s linear;
+	-moz-transition: background 0.3s linear;
+	-o-transition: background 0.3s linear;
+	transition: background 0.3s linear;
+}
+.login .load:hover {
+	background:#4d4d4d;
+}
+.login .reg{
+	background: rgb(59, 140, 255);
+	color: #fff;
+	margin-left:-7px;
+}
+.loginbtn {
+	line-height: 70px;
+	color: #6B6A6A;
+}
+
+.logininput input {
+	display: block;
+	height: 40px;
+	line-height: 40px;
+	width: 100%;
+	border: #DAE2E5 1px solid;
+	text-indent: 10px;
+	overflow: hidden;
+	color: #979696;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.logininput .loginusername {
+	margin-top: 15px;
+	margin-bottom: 10px;
+}
+
+.loginsubmit input {
+	width: 130px;
+	height: 40px;
+	line-height: 40px;
+	color: #fff;
+	background: rgb(59, 140, 255);
+	display: block;
+	text-align: center;
+	font-size: 20px;
+	border: none;
+	font-family: '微软雅黑';
+	cursor: pointer;
+}
+
+.loginsubmit {
+	width: 130px;
+	height: 40px;
+	margin: 15px 20px 0 0;
+	position: relative;
+	display: inline-block;
+}
+.quxiao{
+	width: 130px;
+	height: 40px;
+	position: relative;
+	margin-left: 25px;
+	display: inline-block;
+}
+.quxiao span {
+	width: 130px;
+	height: 40px;
+	line-height: 40px;
+	color: rgb(59, 140, 255);
+	display: inline-block;
+	text-align: center;
+	font-size: 20px;
+	border: 1px solid rgb(59, 140, 255);
+	font-family:'微软雅黑';
+	cursor: pointer;
+}
