--- a/networkdisk/src/main/webapp/manager/css/notice.css
+++ b/networkdisk/src/main/webapp/manager/css/notice.css
@@ -33,3 +33,9 @@ td{
 	height: 50px;
 	text-align: center;
 }
+.tdcontent{
+	text-align:center;
+    overflow:hidden;
+	text-overflow:ellipsis;
+	white-space:nowrap;
+}
