--- a/networkdisk/src/main/webapp/css/style.css
+++ b/networkdisk/src/main/webapp/css/style.css
@@ -1800,6 +1800,7 @@ img.userpic {
     color: #fff;
     text-align: center;
     border-radius: 20px;
+    display:none;
     top: 0;
     left:-20px;
     margin-left: 325px;
